--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
       padding:15px;
       line-height:1.7;
     ">
-      <p>我的网站</p>
-      <p>我的网站</p>
-      <p>我的网站</p>
-      <p>我的网站</p>
-      <p>我的网站</p>
+      <p>性别：男</p>
+      <p>爱好：电脑，游泳</p>
+      <p>工作：服务行业</p>
+      <p>个人签名：随性而已</p>
     </div>
     <div>
       <div style="
